@@ -1,3 +1,8 @@
+2008-07-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Make plugin work together with Geany plugin API v78.
+
+
 2008-07-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Make plugin compile with Geany svn r2767.
